--- a/announce/announceContent.html
+++ b/announce/announceContent.html
@@ -58,7 +58,7 @@
 					var div = document.createElement('div');
 					div.className = 'announceDetailPage';
 					div.innerHTML = '<div class="announceDetailTil">' +
-						data.Data.Data.Title +
+						data.Data.Data.title +
 						'</div><div class="announceDetailTime clearfix"><span class="floatL Ltime">' +
 						data.Data.Data.time +
 						'</span><span class="floatR Rfrom">' +
