--- a/aboutUs/secret.html
+++ b/aboutUs/secret.html
@@ -19,7 +19,7 @@
 			width:2.14rem;
 			height:2.16rem;
 			margin:0.49rem auto 0.6rem;
-			background: url(../img/ztx.png) no-repeat center center;
+			background: url(../img/ztxx.png) no-repeat center center;
 			background-size:100% 100%;
 		}
 		.secretArticleTil{
