--- a/schedule/schedule_list.html
+++ b/schedule/schedule_list.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 
 	<head>
@@ -149,6 +149,7 @@
 		</div>
 
 		<script>
+			var name="赛事";
 			function texts(id,name) {
 				window.location.href = "scheduleContent.html?id=" + id+"&name="+name;
 			}
@@ -186,7 +187,7 @@
 									data.Data.Data[i].content +
 									'</div></div></div><div class="saishi_time"><p class="peixun_p">培训时间：' +
 									data.Data.Data[i].MatchDate +
-									'</p><button onclick="texts(' + data.Data.Data[i].id + ',\''赛事'\')" class="mui-btn-blue border-radius">快速报名</button></div>'
+									'</p><button onclick="texts(' + data.Data.Data[i].id + ',\''+name+'\')" class="mui-btn-blue border-radius">快速报名</button></div>'
 							fragment.appendChild(li);
 						}
 					}
@@ -227,7 +228,7 @@
 									data.Data.Data[i].content +
 									'</div></div></div><div class="saishi_time"><p class="peixun_p">培训时间：' +
 									data.Data.Data[i].MatchDate +
-									'</p><button onclick="texts(' + data.Data.Data[i].id + ',\''赛事'\')" class="mui-btn-blue border-radius">快速报名</button></div>'
+									'</p><button onclick="texts(' + data.Data.Data[i].id + ',\''+name+'\')" class="mui-btn-blue border-radius">快速报名</button></div>'
 								fragment.appendChild(li);
 							}
 						}
@@ -242,6 +243,7 @@
 				});
 			}
 			//加载导航的方法
+			
 			function innerNav() {
 
 				$.ajax({
