--- a/activationRecord/activationRecord.html
+++ b/activationRecord/activationRecord.html
@@ -22,7 +22,7 @@
 		<script type="text/html" id="protocol-temp">
 			
 			{{each activition as value}}
-			<li class="activationRecordLi">
+			<li class="activationRecordLi" id="{{value.ActivityId}}">
 				<div class="EventTitle">
 					{{value.title}}
 				</div>
