--- a/schedule/scheduleContent.html
+++ b/schedule/scheduleContent.html
@@ -52,7 +52,7 @@
 					<span></span>
 				</div>
 			</div>
-			<button class="mui-btn mui-btn-primary mui-btn-block" onclick="btnOpen(' + data.Data.Data.id + ','+type+')">立即报名</button>
+			<button class="mui-btn mui-btn-primary mui-btn-block" onclick="btnOpen(' + id + ','+type+')">立即报名</button>
 			<br />
 		</div>
 		
