--- a/attestation/identifyresult.html
+++ b/attestation/identifyresult.html
@@ -57,7 +57,7 @@
 
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/jquery-1.9.1.min.js"></script>
-		<!--<script src="../js/zepto_1.1.3.js"></script>-->
+		<script src="../js/zepto_1.1.3.js"></script>
 		<script src="../js/flexable.js"></script>
 		<script src="../js/identifyresult.js"></script>
 		<script src="../js/artTemplate.js"></script>
