--- a/attestation/identifyresult.html
+++ b/attestation/identifyresult.html
@@ -36,7 +36,8 @@
 
 			<div class="identifyImg">
 				<div class="resultShowTil">
-					<i class="memberback"></i> 认证查询结果
+					<!--<i class="memberback"></i>--> 
+					认证查询结果
 				</div>
 				<div class="memberImage">
 					<div class="Img_img">
