--- a/schedule/schedule_list.html
+++ b/schedule/schedule_list.html
@@ -183,7 +183,7 @@
 									'"><div onclick="texts(' + data.Data.Data[i].id + ')" class="saishi_text mui-media-body"><h2 class="">' +
 									data.Data.Data[i].Title +
 									'</h2><div class="mui-text-justify">内容简介：' +
-									data.Data.Data[i].content +
+									data.Data.Data[i].tag +
 									'</div></div></div><div class="saishi_time"><p class="peixun_p">培训时间：' +
 									data.Data.Data[i].MatchDate +
 									'</p><button onclick="texts(' + data.Data.Data[i].id + ')" class="mui-btn-blue border-radius">快速报名</button></div>'
@@ -224,7 +224,7 @@
 									'"><div onclick="texts(' + data.Data.Data[i].id + ')" class="saishi_text mui-media-body"><h2 class="">' +
 									data.Data.Data[i].Title +
 									'</h2><div class="mui-text-justify">内容简介：' +
-									data.Data.Data[i].content +
+									data.Data.Data[i].tag +
 									'</div></div></div><div class="saishi_time"><p class="peixun_p">培训时间：' +
 									data.Data.Data[i].MatchDate +
 									'</p><button onclick="texts(' + data.Data.Data[i].id + ')" class="mui-btn-blue border-radius">快速报名</button></div>'
