--- a/members/membersCont.html
+++ b/members/membersCont.html
@@ -58,7 +58,7 @@
 		</script>
 
 		<script src="../js/jquery-1.9.1.min.js"></script>
-		<!--<script src="../js/membersCont.js"></script>-->
+		<script src="../js/membersCont.js"></script>
 		<script src="../js/mui.min.js"></script>
 		<script type="text/javascript" src="../js/artTemplate.js" ></script>
 		
