--- a/schedule/scheduleContent.html
+++ b/schedule/scheduleContent.html
@@ -78,7 +78,7 @@
 				type: "post",
 				url: DetailUrl,
 				data: {
-					MatchId: id
+					MatchNavBarId: id
 				},
 				datatype: "json",
 				success: function(data) {
