--- a/schedule/scheduleContent.html
+++ b/schedule/scheduleContent.html
@@ -69,7 +69,7 @@
 			var id = GetQueryString("id");
 			var GAME="game";
 			function btnOpen(id,type) {
-				window.location.href = "segue://?id=" + id+"&type="+GAME;
+				window.location.href = "segue://id=" + id+"&type="+GAME;
 			}
 
 			var DetailUrl = "http://47.93.192.128:5001/Match/MatchDetail";
@@ -78,7 +78,7 @@
 				type: "post",
 				url: DetailUrl,
 				data: {
-					MatchNavBarId: id
+					MatchId: id
 				},
 				datatype: "json",
 				success: function(data) {
