--- a/training/trainingContent.html
+++ b/training/trainingContent.html
@@ -69,7 +69,7 @@
 			var id = GetQueryString("id");
 			var TRAIN="train";
 			function btnOpen(id,type) {
-				window.location.href = "segue://?id=" + id+"&type="+TRAIN;
+				window.location.href = "segue://id=" + id+"&type="+TRAIN;
 			}
 
 			var DetailUrl = "http://47.93.192.128:5001/Train/TrainDetail";
