--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -23,8 +23,7 @@
 
 	<body>
 		<div class="dg_record">
-			<ul class="mui-table-view mui-table-view-member">
-			</ul>
+			<ul class="mui-table-view mui-table-view-member"></ul>
 		</div>
 		
 		<script type="text/html" id="memberRecord">
