--- a/announce/announceContent.html
+++ b/announce/announceContent.html
@@ -25,14 +25,13 @@
 			<div class="mui-scroll">
 				<div class="announceDetailPage">
 					<div class="announceDetailTil">
-						{{include "content"}}
+						{{title}}
 					</div>
 					<div class="announceDetailTime clearfix">
 						<span class="floatL Ltime">{{time}}</span>
 						<span class="floatR Rfrom">{{source}}</span>
 					</div>
 					<div class="announceDetailMainbody">
-						 {{content}}
 					</div>
 				</div>
 			</div>
