--- a/aboutUs/aboutUs.html
+++ b/aboutUs/aboutUs.html
@@ -19,8 +19,9 @@
 			width:2.14rem;
 			height:2.16rem;
 			margin:0.49rem auto 0.6rem;
-			background: url(../img/map_img1.jpg) no-repeat center center;
-			background-size:100% 100%;
+			border-radius: 2.16rem;
+			background: url(../img/771384650202816352.png) no-repeat center center;
+			background-size:120% 120%;
 		}
 		.version{
 			font-size:0.24rem;
@@ -84,7 +85,7 @@
 	</body>
 
 
-<!doctype html>
+<!--<!doctype html>
 <html>
 
 	<head>
@@ -169,4 +170,4 @@
 	</body>
 
 
-</html>
+</html>-->
