--- a/aboutUs/secret.html
+++ b/aboutUs/secret.html
@@ -19,8 +19,9 @@
 			width:2.14rem;
 			height:2.16rem;
 			margin:0.49rem auto 0.6rem;
-			background: url(../img/map_img1.jpg) no-repeat center center;
-			background-size:100% 100%;
+			border-radius: 2.16rem;
+			background: url(../img/771384650202816352.png) no-repeat center center;
+			background-size:121% 121%;
 		}
 		.secretArticleTil{
 			font-size:0.28rem;
