--- a/charity/charity_list.html
+++ b/charity/charity_list.html
@@ -35,7 +35,7 @@
 			
 			<div class="charity_tit">
 				<h2>最新图文</h2>
-				<a id="goIos">更多></a>
+				<a class="goIos">更多></a>
 			</div>
 			{{each activition as value}}
 					{{include 'imgnewslist' value}}
