--- a/attestation/attestation.html
+++ b/attestation/attestation.html
@@ -9,7 +9,8 @@
 		<link href="../css/common.css" rel="stylesheet" />
 		<link href="../css/attestation.css" rel="stylesheet" />
 		<script src="../js/flexable.js"></script>
-		<script src="../js/zepto_1.1.3.js"></script>
+		<script src="../js/jquery.js"></script>
+		<!--<script src="../js/zepto_1.1.3.js"></script>-->
 
 	</head>
 	<body>
