--- a/charity/GetGongyiNewsList.html
+++ b/charity/GetGongyiNewsList.html
@@ -24,7 +24,7 @@
 			{{each activition as value}}
 			<li class="activationRecordLi activationRecordLiFlex"  id="{{value.newsid}}">
 				<div class="EventTitle EventTitleCont" >
-					<a>{{value.newstitle}}</a>
+					<a style="color:#333;">{{value.newstitle}}</a>
 				</div>
 				<div class="EventTime EventTimeLeft">
 					{{value.createtime}}
