--- a/searchList/searchContent.html
+++ b/searchList/searchContent.html
@@ -61,7 +61,7 @@
 				},
 				datatype: "json",
 				success: function(data) {
-					
+					console.log(data)
 					data = eval('(' + data + ')');
 					var fragment = document.createDocumentFragment(); //创建一个代码片段
 					var div = document.createElement('div');
