--- a/searchList/searchList.html
+++ b/searchList/searchList.html
@@ -23,7 +23,7 @@
 		<div class="mui-content">
 			<div id="slider" class="mui-slider mui-fullscreen">
 				<ul class="searchListPage" id="List">
-					<!--<li class="mxhLi">
+					<li class="mxhLi">
 						<div class="mui-table-Img"><img src="../img/img1.png" /></div>
 						<div class="mui-table-text">
 							<p class="mui-table-Tile">2017年全国大众跆拳道一级以上裁判员年审复训培训班</p>
@@ -45,7 +45,7 @@
 						</div>
 						<div class="muipurelytext ">
 							<p class="muipurelylook clearfix"><span class="lookLeft">2017年5月20日 CCTV5</span><span class="lookRight"><i class="look"></i> 1.5万</span></p>
-						</div>-->
+						</div>
 					</li>
 				</ul>
 			</div>
