--- a/attestation/attestation.html
+++ b/attestation/attestation.html
@@ -23,7 +23,7 @@
 			</div>
 			
 			<div class="attestationSelectButton">
-				<span id="inquireBtn">查询</span>
+				<div id="inquireBtn">查询</div>
 			</div>
 			<div class="attestationSelectHelp">
 				<span id="HelpSelect"><i></i><span>认证查询帮助</span></span>
