--- a/charity/charity_list.html
+++ b/charity/charity_list.html
@@ -26,7 +26,7 @@
 			
 				
 			<div class="charity_tit">
-				<h2>支教动态</h2>
+				<h2>支教新闻</h2>
 				<a href="GetGongyiNewsList.html">更多></a>
 			</div>
 			{{each activition as value}}
