--- a/charity/charity_list.html
+++ b/charity/charity_list.html
@@ -22,7 +22,7 @@
 		<div class="charityList"></div>
 		
 		<script type="text/html" id="charityList">
-			<div ><a href=""><img class="charity_img" src="../img/Charity_banner.jpg"/></a></div>
+			<div ><a><img class="charity_img" src="../img/Charity_banner.jpg"/></a></div>
 			
 				
 			<div class="charity_tit">
