--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 		<meta charset="UTF-8">
 		<title>认证查询</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="css/mui.min.css" rel="stylesheet" />
-		<link href="css/common.css" rel="stylesheet" />
-		<link href="css/attestation.css" rel="stylesheet" />
-		<script src="js/flexable.js"></script>
-		<script src="js/zepto_1.1.3.js"></script>
+		<link href="../css/mui.min.css" rel="stylesheet" />
+		<link href="../css/common.css" rel="stylesheet" />
+		<link href="../css/attestation.css" rel="stylesheet" />
+		<script src="../js/flexable.js"></script>
+		<script src="../js/jquery.js"></script>
+		<!--<script src="../js/zepto_1.1.3.js"></script>-->
 
 	</head>
 	<body>
@@ -22,7 +23,7 @@
 			</div>
 			
 			<div class="attestationSelectButton">
-				<span id="inquireBtn">查询</span>
+				<div id="inquireBtn">查询</div>
 			</div>
 			<div class="attestationSelectHelp">
 				<span id="HelpSelect"><i></i><span>认证查询帮助</span></span>
@@ -32,10 +33,8 @@
 				<p>在级位证书编号栏中输入要查询的会员级位证书编号,级位证书编号为经中国跆拳道协会颁发的有效证书.为保障个人会员的信息安全,请在查询时,要求姓名和级位证书编号必须填写正确,点击查询即可确认中国跆拳道协会个人会员级位信息.</p>
 			</div>
 		</div>
-		
-		
-		<script src="js/mui.min.js"></script>
-		<script src="js/attestation.js"></script>
+		<script src="../js/mui.min.js"></script>
+		<script src="../js/attestation.js"></script>
 	</body>
 
 </html>
