--- a/charity/GetGongyiNewsList.html
+++ b/charity/GetGongyiNewsList.html
@@ -22,7 +22,7 @@
 		</div>
 		<script type="text/html" id="GetGongyiNewsList">
 			{{each activition as value}}
-			<li class="activationRecordLi activationRecordLiFlex"  id="{{value.newsid}}">
+			<li class="activationRecordLi activationRecordLiFlex"  id="{{value.newsid}}" viewCount="{{value.newsid}}">
 				<div class="EventTitle EventTitleCont" >
 					<a style="color:#333;">{{value.newstitle}}</a>
 				</div>
