--- a/members/membersCont.html
+++ b/members/membersCont.html
@@ -48,9 +48,12 @@
 					<span>{{phone}}</span>
 				</div>
 			</div>
-			<div class="peixun_new mui-content-padded">
+			<ul class="peixun_new mui-content-padded">
 				<h2 class="mui-h4"><i></i>培训详情</h2>
 				<p class="mui-text-justify">{{content}}</p>
+				<ul class="imgList">
+					<li><img src="{{pic}}"/></li>
+				</ul>
 			</div>
 			<button class="mui-btn mui-btn-primary mui-btn-block">已举办过的活动</button>
 			
