--- a/searchList/searchList.html
+++ b/searchList/searchList.html
@@ -66,7 +66,7 @@
 				type: "post",
 				url: searchUrl,
 				data: {
-					key: 11
+					key: key
 				},
 				datatype: "json",
 				success: function(data) {
