--- a/charity/charity_list.html
+++ b/charity/charity_list.html
@@ -22,7 +22,7 @@
 		<div class="charityList"></div>
 		
 		<script type="text/html" id="charityList">
-			<div ><a><img class="charity_img" src="../img/Charity_banner.jpg"/></a></div>
+			<div><a><img class="charity_img" src="../img/Charity_banner.jpg"/></a></div>
 			
 				
 			<div class="charity_tit">
@@ -58,7 +58,7 @@
 		<script type="text/html" id="imgnewslist">
 			<div class="charity_list_img">
 				{{each imgnewslist as value i}}
-					<a href="" id="{{value.imgnewsid}}"><img src="../img/Charity_img1.jpg {{value.img}}"/></a>
+					<a href="" id="{{value.imgnewsid}}"><img src="{{value.img}}"/></a>
 				{{/each}}
 			</div>
 		</script>
